--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,10 @@ body{
 				transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 			}
 			
-				/* #nav > ul > li.active
+				#nav > ul > li.active
 				{
 					border-color: rgba(0, 0, 0, 0.35);
-				} */
+				}
 				#nav > ul > li > a
 				{
 					font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
