--- a/css/style.css
+++ b/css/style.css
@@ -243,11 +243,11 @@ body{
 	float:right;
 }
 .top-grid-right h2{
-	font-size: 1em;
+	font-size: 1.2em;
 	color: #4C4C4C;
-	font-weight: 300;
+	font-weight: 300px;
 	line-height: 1.5em;
-	margin: 0px 0px 0.4em 0;
+	margin: 0.45em 0px 0.4em 0;
 	display: block;
 	transition:0.5s all;
 	-webkit-transition:0.5s all;
